--- a/views/mixins/_storeForm.pug
+++ b/views/mixins/_storeForm.pug
@@ -1,9 +1,9 @@
 mixin storeForm(store = {})
-  form(action="/add" method="POST" enctype="multipart/form-data" class="card")
+  form(action="/add" method="GET" enctype="multipart/form-data" class="card")
     label(for="name") Name
     input(type="text" name="name")
     label(for="description") Description
-    input(type="text" name="description")
+    textarea(name="description")
     - const choices = ['Wifi', 'Open Late', 'Family Friendly', 'Vegetarian', 'Licensed'];
     ul.tags
       each choice in choices
