--- a/views/mixins/_storeForm.pug
+++ b/views/mixins/_storeForm.pug
@@ -3,7 +3,9 @@ mixin storeForm(store = {})
     label(for="name") Name
     input(type="text" name="name" value=store.name)
     label(for="description") Description
-    textarea(name="description") #{store.description || 'Add some juicy details now!'}
+    textarea(name="description" placeholder="Add some juicy details now!") #{store.description}
+    label(for="address") Address
+    input(type="text" id="address" name="location[address]" value=(store.location ? store.location.address : ''))
     - const choices = ['Wifi', 'Open Late', 'Family Friendly', 'Vegetarian', 'Licensed'];
     - const tags = store.tags || []
     ul.tags
